<?xml version="1.0"?>
<package format="2">
  <name>flysky_ibus</name>
  <version>0.0.1</version>
  <description>The flysky_ibus package</description>

  <maintainer email="shinhyunp1@gmail.com">guni9191</maintainer>

  <license>BSD</license>

  <url type="website">https://guni91.wordpress.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
